# smalls

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  types_universal.h
ext/googletest/: CMakeLists.txt
inc/: CMakeLists.txt  cuda_types_utils.h  matrix.h  matrix_stream.h  operations.h  quaternion.h  storage.h  vector.h
tst/: CMakeLists.txt  cuda_types_utils.h
tst/tst_cuda/: CMakeLists.txt  vector_device_test.cu
tst/tst_host/: CMakeLists.txt  quaternion_test.cpp  vector_host_test.cpp
